qt4-x11 (4:4.6.2-2) UNRELEASED; urgency=low

  * Add upstream patch:
    - 0001_qpixmap_load_no_modify_referenced_copies.diff
      Fixed QPixmap::load() to not modify referenced copies.

 -- Fathi Boudra <fabo@debian.org>  Fri, 19 Mar 2010 16:28:34 +0100

qt4-x11 (4:4.6.2-1) experimental; urgency=low

  * New upstream release (Closes: #571990).
    - Fix a crash in QDBusPendingReply/QDBusReply in case of unconnected calls.
      (Closes: #560838)
    - Fix FTBFS on GNU/kFreeBSD due to lack of WTF_USE_JSVALUE64.
      (Closes: #565731)

  [ Modestas Vainius ]
  * Change my email address to @debian.org one.
  * Restore binary compatibility with binaries built with g++-4.3 on armel
    (patch 92_armel_gcc43_valist_compat.diff). (Closes: #566259)
  * Add symbol files for Qt public libraries. They are based on the 4:4.5.3
    version and upgraded to 4:4.6.1/4:4.6.2 on amd64/i386.
  * Bump build dependency of pkg-kde-tools to version 0.6.4 as it is needed to
    handle symbol files.
  * Build depend on libjpeg-dev rather than libjpeg62-dev.
  * Drop Phonon from Qt. Leave only libqt4-phonon package which sole purpose is
    to enable bootstraping of new arches.

  [ Fathi Boudra ]
  * Add debian/patches/95_sparc_platform_definition.diff patch to fix build for
    32-bit sparc machines.
  * Update debian/rules:
    - Use linux-g++-64 as platform_arg on required architectures (amd64, ia64
      and sparc64).
  * Add 96_powerpc_no_gc_sections.diff: Don't pass -Wl,--gc-sections on powerpc
    when building libQtWebKit.so; works around a binutils bug that results in a
    segfault. Thanks to Steve Langasek.
  * Add 20_install_qvfb.diff: build Qt Virtual Framebuffer (qvfb) tool.
  * Add 51_kfreebsd_strnstr_build_fix.diff: Fix FTBFS on GNU/kFreeBSD caused by
    missing strnstr() on glibc systems.
  * Remove patches:
    - 19_install_qdoc3.diff - merged upstream.
    - 81_hurd_clock_gettime.diff - merged upstream.
    - 0289-context-for-shortcuts-tr.diff - rejected upstream.