@@ -34,13 +34,20 @@ ifeq ($(DEB_HOST_ARCH),arm)
 	extra_configure_opts += -DQT_QLOCALE_USES_FCVT
 endif
 
-linux64_architectures := amd64 ia64 sparc64
 ifeq ($(DEB_HOST_ARCH_OS),linux)
-  ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), $(linux64_architectures)))
+  ifeq ($(DEB_HOST_ARCH),amd64)
 	platform_arg = linux-g++-64
   else
+    ifeq ($(DEB_HOST_ARCH),ia64)
+	platform_arg = linux-g++-64
+    else
+      ifeq ($(DEB_HOST_ARCH),sparc64)
+	platform_arg = linux-g++-64
+      else
 	platform_arg = linux-g++
-  endif
+      endif # sparc64
+    endif # ia64
+  endif # amd64
 else
 	platform_arg = glibc-g++
 endif
